AdminToolbox.Office365/2.2.2.0/ChangeLog.md
# **AdminToolbox.Office365**

![AdminToolbox.Office365](https://github.com/TheTaylorLee/AdminToolbox/blob/master/Images/AdminToolbox.Office365.png)

* **1.0.0.0** Created the Module
* **1.0.1.0** Reduced the module load time using .net methods
* **1.0.2.0** Updated convert-mailboxtoshared to fix issues for adding smtp addresses.
* **1.0.2.1** Fix for Invoke-Unzip
* **1.0.3.0** Added markdown to the changelog
* **1.0.4.0** Spellcheck Everything
* **1.0.5.0** Added get-mfastatus
* **1.0.6.0** Added the Get-Rolemembers function
* **1.0.6.1** Fixed Module Description
* **1.0.6.2** Fix to set-AuthPolicy Parameter Validation
* **1.0.7.0** Sorted output for Get-RoleMembers
* **1.0.8.0** Added Invoke-Sync365 function
* **1.0.8.1** Fixed the Enviroment variable for AzureSyncServer
* **1.1.0.0** Updated for eventual core support
* **1.1.1.0** Updated connect-office365 to use latest version of exchange online module
* **1.1.2.0** Updated connect-office365 to include both exchange online versions
* **1.2.0.0** Added multiple functions and updated get-office365 function
* **1.3.0.0** Added multiple functions and updated get-office365 function
* **1.3.0.1** Fixed errors in the get-office365 function
* **2.0.0.0** Updated Get-Office365 and modified the logical structure of the module
* **2.0.0.1** Applied fix to get-vmdetails
* **2.1.0.0** Added Functions Get-TenantDiagrams and Invoke-EXOSharedSession
* **2.2.0.0** Added function Enable-MailboxAccess
* **2.2.1.0** Updated module dependencies so that the Module AzViz doesn't install Az modules.
* **2.2.2.0** Updates for output made by Enable-MailboxAccess